# AerogelOS

./: .gitignore  Makefile  README.md  build_log.txt  final_build_log.txt
bootloader/: Makefile
bootloader/src/: boot.asm
drivers/vga/: Cargo.toml
drivers/vga/src/: lib.rs
kernel/: Cargo.toml  x86_64-myos.json
kernel/.cargo/: config.toml
kernel/src/: interrupts.rs  keyboard.rs  lib.rs  main.rs  memory.rs  pic.rs  shell.rs
tools/: run-qemu.sh  verify-wsl.sh
