[package]
name = "myos-kernel"
version = "0.1.0"
edition = "2021"

[dependencies]
bootloader = "0.9"
volatile = "0.2.6"
spin = "0.9"
x86_64 = "0.14"
uart_16550 = "0.2"

[dependencies.lazy_static]
version = "1.4"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"