[package]
name = "vga_driver"
version = "0.1.0"
edition = "2021"

[dependencies]
volatile = "0.2.7"
spin = "0.9.8"
lazy_static = { version = "1.5.0", features = ["spin_no_std"] }

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

# [lib]
# crate-type = ["staticlib"]
# path = "src/lib.rs"